--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastmcp>=2.13.0.2",
+    "google>=3.0.0",
+    "openai>=2.7.2",
 ]
 
 [tool.setuptools.packages.find]
